local-env/k8s-minikube/VirtualService.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ory-hydra-login-consent
  namespace: kyma-system
  labels:
    app: ory-hydra-login-consent
spec:
  gateways:
  - kyma-system/kyma-gateway
  hosts:
  - ory-hydra-login-consent.kyma.example.com
  http:
  - match:
    - uri:
        exact: /login
    - uri:
        exact: /consent
    route:
    - destination:
        host: ory-hydra-login-consent
        port:
          number: 80

# TODO: 1. make the above deployable, 2. test if this OIDC flow works in browser, 3. Expose it via HTTPS, 4. Restart `apiserver` with appropriate OIDC settings.
# 5. Test on simple case if the above works.
